# CommssionManager

./: .gitignore  README.md  main.py
backend/: .env.example  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 1c887f9c3d81_initial_schema.py  4f2b8a5d3e10_taxonomy_aliases.py  6c3f0b7a92d4_p2_visibility_settings_webhooks.py  7a8f3c2d1e40_order_default_lifecycle_stages.py  8b1d5e9c4f02_character_pages.py  9d6f4c1b2a83_site_title_setting.py  a9f2e6c1d8b4_nullable_commission_title.py  b3d9f1a4c7e2_commission_status.py  b7e2a9c5d1f6_default_stage_names_setting.py  c8d3b0a7e2f1_allow_public_original_download.py  d2c8f5a1e7b3_drop_completed_at.py  d4e5f6a7b8c9_order_commission_files.py  e4a1c9b2f7d8_direct_upload_toggle_and_sessions.py  f3c9d2e8a4b1_focal_zoom.py  f7a3c5b9e2d1_clear_title_description_visibility.py
backend/app/: db.py  images.py  main.py  seed.py  upload_progress.py
backend/app/auth/: deps.py  security.py
backend/app/core/: config.py
backend/app/middleware/: upload_progress.py
backend/app/models/: __init__.py  models.py
backend/tests/: conftest.py  fake_s3.py  test_api.py  test_api_keys.py  test_artists.py  test_character_pages.py  test_commission_listing.py  test_cover.py  test_direct_upload.py  test_exports.py  test_file_delivery.py  test_files.py  test_image_derivatives.py  test_lookups.py  test_migrations.py  test_nodes.py  test_pagination.py  test_public_images.py  test_settings.py  test_storage_s3.py  test_taxonomy_aliases.py  test_taxonomy_constraints.py  test_upload_progress.py  test_visibility.py
deploy/: .env.example  (+9 more)
(+80 files in other folders)
