[project]
name = "commission-manager-backend"
version = "0.1.0"
description = "Commission Manager API"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0.36",
    "alembic>=1.14",
    "psycopg[binary]>=3.2",
    "pydantic>=2.10",
    "pydantic-settings>=2.6",
    "python-multipart>=0.0.17",
    "bcrypt>=4.2",
    "pyjwt>=2.10",
    "pillow>=11.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "httpx>=0.28",
    "ruff>=0.8",
    "testcontainers[postgres]>=4.8",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.uv]
package = false
